# jpqllaves

./: "DRUVENTI  .env.example  .gitignore  README.md  buscar_d21.py  crear_resultados_sheet.py  debug_c5.txt  export_csv.py  inspeccionar_partido_50_c5.py  listar_cruces_c5.py  main.py  partidos_jpq.csv  propagar_resultados.py  pyproject.toml  requirements.txt  todas las llaves.xlsx  ver_filas_partido_50.py
.streamlit/: secrets.toml.example
LLAVES 1er JPQ/: D2.xlsx  D4.xlsx  D5.xlsx  D6.xlsx  D7.xlsx  c3.xlsx  c4.xlsx
