[project]
name = "jpqllaves"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"openpyxl>=3.1.5",
	"pandas>=2.3.2",
	"streamlit>=1.49.1",
]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

version = "0.1.0"
description = "Visualizador de resultados JPQ desde Google Sheets"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
	"openpyxl>=3.1.5",
	"pandas>=2.3.2",
	"requests>=2.32.5",
	"streamlit>=1.49.1",
	"google-auth>=2.29.0",
	"google-auth-httplib2>=0.2.0",
]

